--- a/ProjetoEvento/src/main/resources/templates/navbar.html
+++ b/ProjetoEvento/src/main/resources/templates/navbar.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http=//www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorator="LayoutPadrao">
 <head>
 	  <link th:href="@{https://fonts.googleapis.com/icon?family=Material+Icons}" rel="stylesheet"/>
       <link type="text/css" rel="stylesheet" th:href="@{materialize/css/materialize.min.css}"  media="screen,projection"/>
