--- a/ProjetoEvento/src/main/resources/static/materialize/css/styles.css
+++ b/ProjetoEvento/src/main/resources/static/materialize/css/styles.css
@@ -21,28 +21,21 @@ nav{
 }
 
 .nav .brand-logo{
-	margin-left: 10px;
+	margin-left: 20px;
 	margin-right: 10px;
 	
 }
 
 nav .brand-logo{
-	padding-left: 10px;
+	padding-left: 20px;
 	padding-right:10px;
 }
 
-th.left{
-	padding-right: 25px;
-}
 
- /* Icone de exclusão */
-.center  {
+th.center {
     text-align: center;
-    padding-top: 10px;
-    margin-top: 12px;
+  	padding: 15px 5px;
 }
-
-
 
 /*detalhe evento  */
 
