--- a/ProjetoEvento/src/main/resources/templates/LayoutPadrao.html
+++ b/ProjetoEvento/src/main/resources/templates/LayoutPadrao.html
@@ -21,8 +21,8 @@
 	<section layout:fragment="conteudo">
 		<p>Conteudo principal</p>
 	</section>
-
-	<!--JavaScript at end of body for optimized loading-->
+	
+	<div th:fragment="js">
 	<script type="text/javascript" th:src="@{materialize/js/materialize.min.js}"></script>	
 	<script type="text/javascript" th:src="@{materialize/js/jquery.min.js}"></script>
 	<script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js}"></script>
@@ -37,6 +37,7 @@
 		$(document).ready(function () {
 			$('.datepicker').datepicker();
 		});
-	</script>	
+	</script>
+	</div>	
 </body>	  
 </html>
